2017-08-16         Arnold D. Robbins     <arnold@skeeve.com>

	* gawkapi.c (assign_number): Clean up the code a bit.
	(api_get_mpfr, api_get_mpz): Add return NULL in non-MPFR case
	to avoid compiler warnings.

2017-08-16         Arnold D. Robbins     <arnold@skeeve.com>

	* config.guess: Update from GNULIB.
	* NEWS, README: Updated in preparation for release.

2017-08-16         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* gawkapi.c (assign_number): Add 'ifdef HAVE_MPFR' tests to get this
	to build in the absence of MPFR.

2017-08-13         Arnold D. Robbins     <arnold@skeeve.com>

	* gawkapi.h (gawk_api_major_version): Reset to 2 after merging
	in feature/api-mpfr branch.
	* NEWS: `intdiv' is not built-in; remove the entry for up and update
	numbering. Add note about API supporting GMP and MPFR values.

2017-08-09         Arnold D. Robbins     <arnold@skeeve.com>

	* gawkapi.h (check_mpfr_versions): Define differently based on if
	MPFR version macro is defined. Enhance body to use do/while(0).
	(dl_load): Call check_mpfr_versions unconditionally.

2017-08-09         Arnold D. Robbins     <arnold@skeeve.com>

	* main.c (usage): Add URL for Bug reporting info to the help message.

	Unrelated:

	* str_array.c (str_lookup): Make a copy of the string if it
	came from Nnull_string or a null field.  Thanks to
	Daniel Pettet for the report.

2017-08-04         Arnold D. Robbins     <arnold@skeeve.com>

	* array.c, awk.h, awkgram.y, builtin.c, cint_array.c,
	cmd.h, debug.c, eval.c, ext.c, field.c, gawkapi.c, gawkmisc.c,
	gettext.h, int_array.c, main.c, mpfr.c, msg.c, node.c, profile.c,
	re.c, str_array.c, symbol.c: Update copyright years.

2017-08-04         Arnold D. Robbins     <arnold@skeeve.com>

	* config.guess, mkinstalldirs: Updated from GNULIB.

2017-08-01         Juan Manuel Guerrero  <juan.guerrero@gmx.de>

	Bring DJGPP support up to speed.

	* awk.h: Add DJGPP in #if for include of nonposix.h