@@ -1,3 +1,9 @@
+2017-08-17         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* field.c (rebuild_record): Set new fields valref to 1 if
+	original field's valref was > 1. Update the comment. Found
+	by running chem.
+
 2017-08-16         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* gawkapi.c (assign_number): Clean up the code a bit.
